--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.0",
     "prettier": "^2.5.1",
+    "sass": "^1.49.7",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
